Fix wrapping in desktop mode
The wrapping of the Yes/No/? column header wasn't matching the numbers
for the actual events. It turned out that this margin was being applied
to the cell in the event row but not in the header, so the event row was
wider so it wrapped earlier than the column header. Removing it doesn't
seem to make any difference, so doing that.

--- a/static/styles.css
+++ b/static/styles.css
@@ -119,7 +119,6 @@ body {
 .event-table .cell-stats {
   width: 60px;
   white-space: nowrap;
-  margin-right: 10px;
   margin-left: 10px;
 }
 
